<resources>
    <string name="welcome_message">welcome_message</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_action">Action</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_musical">Musical</string>
    <string name="button_add_new">Add</string>
    <string name="button_ok">Ok</string>
    <string name="button_clear_all">Clear all</string>
    <string name="film_title">Title</string>
    <string name="genres">Genres</string>
    <string name="button_cancel">Cancel</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_thriller">Thriller</string>
    <string name="button_delete">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sync_header">Sync</string>
    <string name="main_settings_header">Main settings</string>
    <string name="language_setting_title">Preffered language</string>
    <string name="is_watched_header">Watched</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_new_header">Add new film</string>
    <string name="empty_title_error">Title can\'t be empty!</string>
    <string name="error_upload_changes">Unable to upload changes</string>
    <string name="upload_success">Success!</string>
    <string name="unknown_genre">Unknown</string>
    <string name="title_activity_add_new_film" translatable="false">AddNewFilmActivity</string>
    <string name="genres_choose">Choose genres</string>
    <string name="film_already_exists">Film already exists!</string>
    <string name="upload_error">ERROR: Unable to upload</string>
    <string name="app_version" translatable="false">app_version</string>
    <string name="settings_info_title">App information</string>
    <string name="setting_app_version_title">App version</string>
    <string name="title_activity_randomizer" translatable="false">RandomizerActivity</string>
    <string name="genre_series">Series</string>
    <string name="genre_animation">Animation</string>
    <string name="error_empty_genre">There is too few genres!</string>
    <string name="setting_googleSheet_URL">Here goes link to your Google Sheet</string>
    <string name="setting_googleSheet_URL_title">Google Sheet URL</string>
    <string name="error_undefined_sheetUrl">Undefined Google Sheet URL. Please define it in settings to continue!</string>
    <string name="app_name">FilmRandomizer</string>
    <string name="button_randomize">Randomize</string>
    <string name="random_result_title">Result</string>
    <string name="button_edit">Edit</string>
    <string name="button_watched_film">Watched</string>
    <string name="edit_header">Edit Film</string>
    <string name="button_save">Save</string>
    <string name="loading">Loading…</string>
    <string name="question_mark_watched">Do you want to mark it watched?</string>
    <string name="title_activity_editor">Editor</string>
    <string name="setting_watched_filter">Hide wathced films</string>
</resources>