<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/main_settings_header">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="ru"
            android:entries="@array/supported_languages"
            android:entryValues="@array/supported_language_values"
            android:key="setting_app_language"
            android:title="@string/language_setting_title"
            app:iconSpaceReserved="false"
            app:summary="ru" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="setting_watched_filter"
            android:title="@string/setting_watched_filter"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSpaceReserved="false"
        app:title="@string/settings_info_title">

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:recycleEnabled="false"
            android:selectAllOnFocus="true"
            android:title="@string/app_version"
            app:enableCopying="false"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:key="app_version"
            app:persistent="false"
            app:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>