<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filmAddNewWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2FFFFFF"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="25dp"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_header"
        android:textAlignment="center"
        android:textSize="28sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="@string/film_title"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/newFilmTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:ems="10"
                android:hint="@string/film_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="@string/genre"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/genreDropDown"
                style="@android:style/Widget.Material.Spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="start">

            <Button
                android:id="@+id/button_submit_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:paddingHorizontal="30dp"
                android:paddingVertical="16dp"
                android:text="@string/button_add_new"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_cancel_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingVertical="16dp"
                android:text="@string/button_cancel"
                android:textSize="18sp" />
        </LinearLayout>

    </TableLayout>


</LinearLayout>