<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/watchedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filmEditPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:visibility="visible">

        <Button
            android:id="@+id/buttonEditFilm"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:contentDescription="@string/button_edit"
            android:padding="0dp"
            app:cornerRadius="25dp"
            app:icon="@drawable/editing"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="30dp" />

        <Button
            android:id="@+id/buttonWatchedFilm"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:contentDescription="@string/button_watched_film"
            android:padding="0dp"
            app:cornerRadius="25dp"
            app:icon="@drawable/eye"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="40dp"
            app:iconTintMode="src_in" />

        <Button
            android:id="@+id/buttonCancelFilmEdit"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="2"
            android:padding="0dp"
            android:text="@string/button_cancel"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/buttonDeleteFilm"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:autoSizeTextType="none"
            android:contentDescription="@string/button_delete"
            android:padding="0dp"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="24sp"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconSize="40dp"
            app:iconTint="@color/design_default_color_error"
            app:iconTintMode="multiply" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>